prevent overflow in input

--- a/style.css
+++ b/style.css
@@ -38,8 +38,15 @@ body {
 }
 .screen .input {
   white-space: pre;
+  display: inline-block;
+  width: fit-content;
+  margin: 2px;
 }
 .screen .input.overFlow {
+  display: flex;
+  justify-content: flex-end;
+  overflow: hidden;
+  width: auto;
 }
 .calculator .buttons {
   display: flex;
